fix preview panel on mobile screen

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -9,6 +9,10 @@
 }
 
 .editor-panel {
+  height: 45vh;
+}
+
+.preview-panel {
   height: 50vh;
 }
 
@@ -25,6 +29,9 @@
 
 @include media-breakpoint-up(md) {
   .editor-panel {
+    height: 95vh;
+  }
+  .preview-panel {
     height: 100vh;
   }
   .separator {
